feat: split top adverts into flood/direct
closes: #90
